clusters/k8s-demo-with-pjh/ci-cd/jibaek-cicd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jibaek-cicd-ingress
  namespace: jibaek-cicd
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: "gce"
spec:
  ingressClassName: gce
  rules:
  - host: "jenkins.baekjaein.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  - host: "argocd.baekjaein.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jibaek-argocd-server
            port:
              number: 443
